--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">uboze</string>
+    <string name="preference_file_key">uboze_application_state</string>
 </resources>
